--- a/Ch03-linreg-lab.ipynb
+++ b/Ch03-linreg-lab.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/guoyihan888/ISLP_labs/blob/main/Ch03-linreg-lab.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "18156290",
       "metadata": {
         "id": "18156290"
@@ -41,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "c5fcfd8f",
       "metadata": {
         "execution": {
@@ -77,7 +67,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "42cfb62e",
       "metadata": {
         "execution": {
@@ -193,7 +183,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "79099069",
-        "outputId": "ca5bc727-27ba-4b53-e304-fe99da9f1e86"
+        "outputId": "8d6cafb3-5c1e-4515-f377-20c84f789fae"
       },
       "outputs": [
         {
@@ -278,7 +268,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "3f99195f",
-        "outputId": "c5087bdd-2e3e-4ac2-f8dc-644456478873"
+        "outputId": "3fb53401-7a46-48e3-c06c-69747ba7493e"
       },
       "outputs": [
         {
@@ -487,7 +477,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "f3f913ca",
-        "outputId": "9e27ddb2-d367-4d3b-81bf-5edd76d72ad5"
+        "outputId": "1c208cff-a61d-436a-a419-180e50d4b1ca"
       },
       "outputs": [
         {
@@ -550,7 +540,7 @@
           "shell.execute_reply": "2024-06-04T23:19:07.995348Z"
         },
         "id": "d720e2c5",
-        "outputId": "c8d43be2-3240-4235-afa9-c807ef78926f"
+        "outputId": "dad6ec76-ca5a-45a5-d336-217c345b4f0b"
       },
       "outputs": [
         {
@@ -598,7 +588,7 @@
           "shell.execute_reply": "2024-06-04T23:19:08.000660Z"
         },
         "id": "40e9b0d5",
-        "outputId": "1ec4a107-fa8e-4ce5-919e-f2019ab8815a"
+        "outputId": "a6e986e1-6e6e-4cab-f247-8e354c09058c"
       },
       "outputs": [
         {
@@ -731,7 +721,7 @@
         },
         "lines_to_next_cell": 2,
         "id": "3d340a07",
-        "outputId": "4a575f9f-3ad8-4d1f-a3a2-4858a42f83c3"
+        "outputId": "2cb70950-6589-4870-96b3-fa2d804a1e2b"
       },
       "outputs": [
         {
@@ -846,7 +836,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "11b07af0",
-        "outputId": "bda6661e-9604-4d0a-ae4e-d08024494d19"
+        "outputId": "74269bba-586b-428c-d3aa-74dd0233a37c"
       },
       "outputs": [
         {
@@ -945,7 +935,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "d5c7b370",
-        "outputId": "7d23662f-11a9-4328-c7d8-e765ce228d96"
+        "outputId": "18e6a9d0-004c-472a-9fd0-e0a32b776971"
       },
       "outputs": [
         {
@@ -1054,7 +1044,7 @@
           "shell.execute_reply": "2024-06-04T23:19:08.038952Z"
         },
         "id": "5b205c0b",
-        "outputId": "539627eb-5666-41ac-e64a-f3e70776cddb"
+        "outputId": "f23432cb-3261-430a-8241-ab748de71e5b"
       },
       "outputs": [
         {
@@ -1215,7 +1205,7 @@
         },
         "lines_to_next_cell": 2,
         "id": "4b024467",
-        "outputId": "8298d5a9-f968-4ea3-b226-94d4b3b80bb6"
+        "outputId": "28922616-9a75-40e4-9f92-ac8a475fd9f8"
       },
       "outputs": [
         {
@@ -1261,7 +1251,7 @@
           "shell.execute_reply": "2024-06-04T23:19:08.046559Z"
         },
         "id": "195e0ace",
-        "outputId": "6f194280-68cc-4bea-b938-2e97b8e602f1"
+        "outputId": "ac72e228-c8b3-4ce3-adb0-bab47b7122c8"
       },
       "outputs": [
         {
@@ -1350,7 +1340,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "768374f6",
-        "outputId": "cb39457f-693c-4496-d473-54949e391006"
+        "outputId": "4699f7b9-767a-4c3a-906e-d2ad8fd67567"
       },
       "outputs": [
         {
@@ -1392,7 +1382,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "1a86b943",
-        "outputId": "c9533879-5ec8-4c1c-8aa0-8df8a65b3798"
+        "outputId": "29637c10-0506-4c46-8f24-d4373f1e5c06"
       },
       "outputs": [
         {
@@ -1435,7 +1425,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "ea9727ca",
-        "outputId": "c9a4b7c5-0775-4eb0-ee52-2ac82554aa79"
+        "outputId": "e3a32ea9-3d0c-4d92-c179-09a9b20901b3"
       },
       "outputs": [
         {
@@ -1581,7 +1571,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "56b75491",
-        "outputId": "f99ac813-2866-43c7-97d5-89fa48b9276d"
+        "outputId": "72c517b2-4514-425b-f25b-6d6aa292aef6"
       },
       "outputs": [
         {
@@ -1651,7 +1641,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "74be2100",
-        "outputId": "36760c61-2481-44f0-f19a-887641f55ac4"
+        "outputId": "261e9595-cb6e-4738-91ba-339581c10553"
       },
       "outputs": [
         {
@@ -1703,7 +1693,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "db8bc925",
-        "outputId": "7d4f673e-d7af-4890-eec8-ae5f4b23df70"
+        "outputId": "4a61075c-01c9-4c92-c19b-f9e72e61ecab"
       },
       "outputs": [
         {
@@ -1777,7 +1767,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "e479373c",
-        "outputId": "05fa8b01-4e9f-4a83-e2ff-f58c6b13d497"
+        "outputId": "b5a2e943-ce40-44ed-bb41-c0ab095c3593"
       },
       "outputs": [
         {
@@ -1878,7 +1868,7 @@
           "shell.execute_reply": "2024-06-04T23:19:08.418717Z"
         },
         "id": "b903170c",
-        "outputId": "9f68f177-0ce4-43fc-9e5c-313c8a024613"
+        "outputId": "47ea1e13-e159-4cac-a183-5c9733dd7171"
       },
       "outputs": [
         {
@@ -1922,7 +1912,7 @@
           "shell.execute_reply": "2024-06-04T23:19:08.433809Z"
         },
         "id": "bbe47670",
-        "outputId": "a9ffb2be-ff21-4e1b-8f19-49039ab775fd"
+        "outputId": "3f6f24f9-385a-4501-eb19-7707cc88cab3"
       },
       "outputs": [
         {
@@ -2102,7 +2092,7 @@
           "shell.execute_reply": "2024-06-04T23:19:08.448429Z"
         },
         "id": "a1484d00",
-        "outputId": "3cbdab0e-9bee-4b01-e2fa-47b1a1fecaf0"
+        "outputId": "be4cd378-fc06-4cae-e555-fdca49e93ba2"
       },
       "outputs": [
         {
@@ -2295,7 +2285,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "46ac946c",
-        "outputId": "78fa4d4e-0108-4a4e-fc29-ce798c1c1309"
+        "outputId": "7088efe6-e52e-49ca-d0ae-2354a05c942a"
       },
       "outputs": [
         {
@@ -2467,7 +2457,7 @@
         },
         "lines_to_next_cell": 2,
         "id": "8bf77477",
-        "outputId": "75ff73ac-d4e2-4dd3-cbbd-14758998395f"
+        "outputId": "4199a137-fdec-43af-de1e-ee1d61e3c17c"
       },
       "outputs": [
         {
@@ -2579,7 +2569,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "6289c3cb",
-        "outputId": "81f5a8eb-3fed-4876-fe3b-fb8a9c0a82aa"
+        "outputId": "e3dcd259-b5be-410a-f589-2cfdddf84b5a"
       },
       "outputs": [
         {
@@ -2701,7 +2691,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "b6542ac6",
-        "outputId": "41ace17b-819f-4472-8b16-3e6cc41551a9"
+        "outputId": "9ff4a315-3d55-4a1f-9a26-774306772183"
       },
       "outputs": [
         {
@@ -2815,7 +2805,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "8e4c6004",
-        "outputId": "9b506b36-dd3a-4d78-fd6e-4ab6596e44a5"
+        "outputId": "41d6240d-3de5-4302-dbc6-f248674e6844"
       },
       "outputs": [
         {
@@ -2877,7 +2867,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "a83f4bd2",
-        "outputId": "951b27e7-f4fd-4b62-eb15-e246521557b9"
+        "outputId": "ce4058c0-82e9-440f-827f-13e2f5c2400b"
       },
       "outputs": [
         {
@@ -2932,7 +2922,7 @@
         },
         "lines_to_next_cell": 0,
         "id": "24efc6f1",
-        "outputId": "e21f24dd-b6c0-497e-e7bd-302286b53f0b"
+        "outputId": "26be0026-3b05-4760-8be8-5516a32a0f93"
       },
       "outputs": [
         {
@@ -3131,8 +3121,7 @@
       "name": "python"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
